UPDATE: States Code (w/o uses)

--- a/abot.html
+++ b/abot.html
@@ -245,24 +245,6 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col s12 m12">
-        <div class="card horizontal">
-          <div class="card-image">
-            <iframe style="height: 100%; width: 100%" src="https://gmail124109.autodesk360.com/shares/public/SHabee1QT1a327cf2b7ad82383857471079c?mode=embed" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0"></iframe>
-
-          </div>
-          <div class="card-stacked">
-            <div class="card-content">
-              <span class="card-title">Design and Functionality</span>
-              <p>Not only is the Aquabot digitally enhanced through its powerful software, but it consists of a built, elegant design that enhances its performance in all settings. Its design has been put to the test both virtually through advanced simulations
-                and physically in real life settings, and it has never failed to accomplish any job it has been assigned to do. To view the Aquabot, see our 3D Model's Immersive View located on the left.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!--
     <div class="row">
@@ -288,7 +270,7 @@
   <!-- ============================================================================== -->
 
 
-  <!-- <div id="footBox"></div> -->
+  <div id="footBox"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script>
