--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	<meta name="description" content="Aquabot - A Revolutionary Approach to Underwater Activity">
 	<meta name="author" content="Agnim Agarwal">
 	<meta charset="UTF-8">
-
 </head>
 
 <body>
@@ -36,15 +35,56 @@
 		</ul>
 	</nav>
 
-	<div id="BigPanelWrapperParent">
+	<div id="BigPanelWrapperParent" style="background: rgb(44, 62, 80) !important; height: 91vh;">
 		<span id="BigPanelWrapper">
-          <div class="Text Title" style="top: 30vh; text-align: center;">
-            <h1 style="font-size: 90%;">Aquabot - A Revolutionary Approach to Underwater Activity</h1>
-          </div>
+			<h1 style=" color: white; transform: translateX(-50%) translateY(-50);font-size: 40px;width: 100vw;text-align: center;padding-top: 30vh;" class="specialtext" class="fadeIn">Aquabot uses <span id="changingword">Artificial Intelligence</span></h1>
+
+<div class="water-container" style="position: relative; top: 35vh;">
+  <div class="water-waves">
+    <svg id="water1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="4000px" height="100px" viewBox="0 0 4000 100" enable-background="new 0 0 4000 100" xml:space="preserve"><rect id="svgEditorBackground" x="0" y="0" width="4000" height="100" style="fill: none; stroke: none;"/>
+<path fill="#00FFFF" d="M3979.598,33c-36.77-12.655-119.326-21.479-215.27-21.479c-95.965,0-178.526,8.824-215.297,21.479h-43.754  c-31.063-9.575-89.989-16.045-157.61-16.045c-67.636,0-126.568,6.47-157.632,16.045h-6.848  c-40.914-12.655-132.776-21.479-239.537-21.479c-106.783,0-198.655,8.824-239.57,21.479h-11.395  c-64.555-10.638-183.124-17.772-318.715-17.772c-135.623,0-254.204,7.134-318.762,17.772h-29.32  c-60.742-12.627-196.83-21.427-354.954-21.427c-158.161,0-294.257,8.8-355.003,21.427h-19.847  c-49.024-12.655-159.1-21.479-287.023-21.479c-119.1,0-222.722,7.645-276.031,18.908c-37.599-11.263-110.684-18.908-194.674-18.908  c-75.893,0-142.867,6.24-182.824,15.749c-34.393-9.509-92.037-15.749-157.348-15.749c-77.688,0-144.527,8.824-174.294,21.479H7v60  h3993V33H3979.598z"/>
+</svg>
+
+    <svg id="water2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="4000px" height="100px" viewBox="0 0 4000 100" enable-background="new 0 0 4000 100" xml:space="preserve"><rect id="svgEditorBackground" x="0" y="0" width="4000" height="100" style="fill: none; stroke: none;"/>
+<path fill="#00FFFF" d="M27.402,33c36.77-12.655,119.326-21.479,215.27-21.479c95.965,0,178.526,8.824,215.297,21.479h43.754  c31.063-9.575,89.989-16.045,157.61-16.045c67.636,0,126.568,6.47,157.632,16.045h6.848  c40.914-12.655,132.776-21.479,239.537-21.479c106.783,0,198.655,8.824,239.57,21.479h11.395  c64.555-10.638,183.124-17.772,318.715-17.772c135.623,0,254.204,7.134,318.762,17.772h29.32  c60.742-12.627,196.829-21.427,354.954-21.427c158.161,0,294.257,8.8,355.003,21.427h19.847  c49.023-12.655,159.1-21.479,287.023-21.479c119.1,0,222.722,7.645,276.031,18.908c37.599-11.263,110.684-18.908,194.674-18.908  c75.893,0,142.866,6.24,182.823,15.749c34.393-9.509,92.037-15.749,157.348-15.749c77.688,0,144.527,8.824,174.294,21.479H4000v60H7  V33H27.402z"/>
+</svg>
+
+    <svg id="water3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="4000px" height="100px" viewBox="0 0 4000 100" enable-background="new 0 0 4000 100" xml:space="preserve"><rect id="svgEditorBackground" x="0" y="0" width="4000" height="100" style="fill: none; stroke: none;"/>
+<path fill="#00FFFF" d="M27.402,33c36.77-12.655,119.326-21.479,215.27-21.479c95.965,0,178.526,8.824,215.297,21.479h43.754  c31.063-9.575,89.989-16.045,157.61-16.045c67.636,0,126.568,6.47,157.632,16.045h6.848  c40.914-12.655,132.776-21.479,239.537-21.479c106.783,0,198.655,8.824,239.57,21.479h11.395  c64.555-10.638,183.124-17.772,318.715-17.772c135.623,0,254.204,7.134,318.762,17.772h29.32  c60.742-12.627,196.829-21.427,354.954-21.427c158.161,0,294.257,8.8,355.003,21.427h19.847  c49.023-12.655,159.1-21.479,287.023-21.479c119.1,0,222.722,7.645,276.031,18.908c37.599-11.263,110.684-18.908,194.674-18.908  c75.893,0,142.866,6.24,182.823,15.749c34.393-9.509,92.037-15.749,157.348-15.749c77.688,0,144.527,8.824,174.294,21.479H4000v60H7  V33H27.402z"/>
+  </svg>
+  </div>
+</div>
+
+
+
+
+
+
+
+<script type="text/javascript">
+
+(function(){
+      var words = [
+          'Internet of Things',
+          'Waterproof Hardware',
+          'Nextgen sensors',
+          'Powerful propellers',
+          'Aquabot Technology',
+          ], i = 0;
+      setInterval(function(){
+          $('#changingword').fadeOut(function(){
+              $(this).html(words[i=(i+1)%words.length]).fadeIn();
+          });
+      }, 3000);
+
+  })();
+
+</script>
+
         </span>
 	</div>
-	<div id="AboutHeroFrame">
-	</div>
+	<!-- <div id="AboutHeroFrame">
+	</div> -->
 
 	<section id="AboutFrame">
 		<div>
@@ -65,7 +105,7 @@
 		<div class="Projecta ProjL" id="Project1a">
 			<div>
 				<h2></h2>
-				<p>The Aquabot is the world's most advanced technology in the field of underwater activity. With applications ranging from marine life research to recreational activity, the Aquabot can benefit anyone. For more information on the Aquabot, see its about
+				<p>The Aquabot is the world's most advanced technology in the field of underwater activity. With applications ranging from marine life research to recreational activity, the Aquabot can be used in a wide variety of scenarios. For more information on the Aquabot, see its about
 					page <a href="abot.html">here</a>.</p>
 			</div>
 		</div>
