--- a/cont.html
+++ b/cont.html
@@ -25,49 +25,49 @@
 
   <!--  ============================ CONTENT STARTS HERE ==============================-->
   <div class="Content">
-  <div class="container" style="background: #f5f5f5; margin-top: 10vh;">
-    <div class="row">
-      <div class="col m12 s12">
-        <!-- <h2 class="center-align">Contact Us</h2> -->
-        <p>If you would like to get in touch with us or have any questions, please fill out the form below.</p>
-        <br>
-        <p id="Thank" style="display: none;">Thank you for your message.</p>
-        <div id="form">
-        <div class="row">
-          <form class="col m12 s12">
+    <div class="container" style="background: #f5f5f5; margin-top: 10vh;">
+      <div class="row">
+        <div class="col m12 s12">
+          <!-- <h2 class="center-align">Contact Us</h2> -->
+          <p>If you would like to get in touch with us or have any questions, please fill out the form below.</p>
+          <br>
+          <p id="Thank" style="display: none;">Thank you for your message.</p>
+          <div id="form">
             <div class="row">
-              <div class="input-field col s12">
-                <input id="name" class="name validate" required="" type="text">
-                <label for="name">Name</label>
-              </div>
-              <div class="input-field col s12">
-                <input id="email" class="email validate form-input" required="" type="email">
-                <label for="email">Email</label>
-              </div>
-              <div class="input-field col s12">
-                <textarea id="message" class="message materialize-textarea validate" required></textarea>
-                <label for="message">Message</label>
-              </div>
-            </div>
+              <form class="col m12 s12">
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="name" class="name validate" required="" type="text">
+                    <label for="name">Name</label>
+                  </div>
+                  <div class="input-field col s12">
+                    <input id="email" class="email validate form-input" required="" type="email">
+                    <label for="email">Email</label>
+                  </div>
+                  <div class="input-field col s12">
+                    <textarea id="message" class="message materialize-textarea validate" required></textarea>
+                    <label for="message">Message</label>
+                  </div>
+                </div>
 
-            <div class="divider"></div>
-            <div class="row">
+                <div class="divider"></div>
+                <div class="row">
               <div class="col m12">
-                <p class="right-align"><button  id="submit" class="btn btn-large waves-effect waves-light" type="button" name="action" onclick="send();">Send</button></p>
+                <p class="left-align"><button class="btn btn-large waves-effect waves-light" type="button" name="action" onclick="send();"><span><i class="material-icons" style="font-size: 40px;">send</i></span></button></p>
               </div>
             </div>
-          </form>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    </div>
   </div>
-</div>
 
 
 
   <!-- ============================================================================== -->
-  <!-- <div id="footBox"></div> -->
+  <div id="footBox"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script>
@@ -83,12 +83,14 @@
   </script>
   <script>
     function send() {
-      if(document.getElementById('name').checkValidity()
-      && document.getElementById('email').checkValidity()
-      && document.getElementById('message').checkValidity()) {
+      if (document.getElementById('name').checkValidity() &&
+        document.getElementById('email').checkValidity() &&
+        document.getElementById('message').checkValidity()) {
         document.getElementById('form').style.display = "none";
-      document.getElementById('Thank').style.display = "block";
+        document.getElementById('Thank').style.display = "block";
 
+      } else {
+        Materialize.toast('Please fill out all of the fields properly!', 4000);
       }
 
     }
