--- a/us.html
+++ b/us.html
@@ -61,7 +61,7 @@
   <!-- ============================================================================== -->
 
 
-  <!-- <div id="footBox"></div> -->
+  <div id="footBox"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script>
