--- a/conc.html
+++ b/conc.html
@@ -34,9 +34,6 @@
       }
     }
   </style>
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=Gugi');
-  </style>
 </head>
 
 <body>
@@ -63,7 +60,7 @@
     <br />
     <br />
 
-    <h1 style="color: white; font-size: 40px; font-family: 'Gugi', cursive;"><center>Concerns</center></h1>
+    <h1 style="color: white; font-size: 40px;  "><center>Concerns</center></h1>
 
 
     <br />
@@ -133,7 +130,7 @@
     <br />
     <br />
 
-    <h1 style="color: white; font-size: 40px; font-family: 'Gugi', cursive;"><center>Safety</center></h1>
+    <h1 style="color: white; font-size: 40px;  "><center>Safety</center></h1>
 
 
     <br />
@@ -174,7 +171,7 @@
     <br />
     <br />
 
-    <h1 style="color: white; font-size: 40px; font-family: 'Gugi', cursive;"><center>Liabilities</center></h1>
+    <h1 style="color: white; font-size: 40px;  "><center>Liabilities</center></h1>
 
 
     <br />
