--- a/cost.html
+++ b/cost.html
@@ -13,6 +13,10 @@
   <meta name="author" content="Agnim Agarwal">
   <meta charset="UTF-8">
   <style>
+    .header:hover {
+      color: black !important;
+      cursor: default !important;
+    }
     .content {
       padding: 1em !important;
     }
@@ -22,6 +26,9 @@
     a:hover {
       text-decoration: none !important;
       /* color: black !important; */
+    }
+    td {
+      width: 20vw;
     }
     @media screen and (max-device-width: 640px){
       .card {
@@ -165,6 +172,30 @@
       </thead>
 
       <tbody>
+        <thead>
+        <tr>
+          <th>Summary</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
+        <tr>
+          <td>Features</td>
+          <td>Includes all of the standard features and SDK as well as external features for underwater research.</td>
+          <td>Includes all of the standard features and SDK as well as external features for recreational activity.</td>
+          <td>Includes all of the standard features and SDK as well as external features for water safety.</td>
+          <td>Includes all of the standard features, SDK, and external features from all other packages.</td>
+        </tr>
+      </thead>
+      <thead>
+        <tr>
+          <th>Specifications</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
         <tr>
           <td>RAM</td>
           <td>32gb</td>
@@ -242,6 +273,7 @@
           <td>20 miles</td>
           <td>30 miles</td>
         </tr>
+      </thead>
       </tbody>
     </table>
 
