--- a/tech.html
+++ b/tech.html
@@ -151,35 +151,35 @@
     </div>
 
 
+        <div class="uk-section uk-light uk-background-cover" style="background-image: url('http://www.bankingtech.com/files/2017/04/Augmented-Reality-AR.jpg')">
+          <div class="uk-container">
 
-    <div class="uk-section-large uk-light uk-background-cover" style="background-image: url(http://www.bankingtech.com/files/2017/04/Augmented-Reality-AR.jpg)">
-      <div class="uk-container">
+            <div class="uk-panel uk-light uk-margin-medium">
+              <h2 class="wow fadeIn">Augmented Reality</h2>
+            </div>
 
-        <div class="uk-panel uk-light uk-margin-medium">
-          <h2 class="wow fadeIn">Augmented Reality</h2>
+            <div class="uk-grid-match uk-child-width-expand@m" uk-grid>
+              <div>
+                <div class="uk-card uk-card-default uk-card-body" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5">
+                  <h2 style="color: black;">What is it?</h2>
+                  <p>
+                    <font color="black">Augmented Reality is simply augmenting virtual elements into the real world. This way you could place objects and see how it looks.</font>
+                  </p>
+                </div>
+              </div>
+              <div>
+                <div class="uk-card uk-card-default uk-card-body" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5">
+                  <h2 style="color: black;">Why is it important?</h2>
+                  <p>
+                    <font color="black">AR is taking a big impact in both the ecommerce and gaming. Many furniture/home improvement companies are moving towards AR, so they can enhance their way of presenting their products.</font>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
 
-        <div class="uk-grid-match uk-child-width-expand@m" uk-grid>
-          <div>
-            <div class="uk-card uk-card-default uk-card-body" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5">
-              <h2 style="color: black;">What is it?</h2>
-              <p>
-                <font color="black">Augmented Reality is simply augmenting virtual elements into the real world. This way you could place objects and see how it looks.</font>
-              </p>
-            </div>
-          </div>
-          <div>
-            <div class="uk-card uk-card-default uk-card-body" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5">
-              <h2 style="color: black;">Why is it important?</h2>
-              <p>
-                <font color="black">AR is taking a big impact in both the ecommerce and gaming. Many furniture/home improvement companies are moving towards AR, so they can enhance their way of presenting their products.</font>
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
 
 
     </section>
