FIX: Mobile Uses Link

--- a/uses.html
+++ b/uses.html
@@ -195,6 +195,11 @@
       });
     });
   </script>
+  <script>
+    if($(window).width() < 768) {
+      location.href("uses-mobile.html");
+    }
+  </script>
 </body>
 
 </html>
