UPDATE: 3D Model description

--- a/abot.html
+++ b/abot.html
@@ -149,7 +149,7 @@
             <div class="card-content">
               <span class="card-title">Meet the Aquabot</span>
               <p>The Aquabot is the world's only artificially enhanced robot pertaining to underwater activity. Powered by advanced technologies, including Machine Learning and Internet of Things, the Aquabot learns instantaneously and is bound to provide
-                helpful, accurate information and assistance to those who need it.
+                helpful, accurate information and assistance to those who need it. For more about the robot itself, visit our immersive 3D model viewer designed specially by our team.  
               </p>
             </div>
           </div>
