FIX: Mobile Uses

--- a/uses.html
+++ b/uses.html
@@ -197,7 +197,7 @@
   </script>
   <script>
     if($(window).width() < 768) {
-      location.href("uses-mobile.html");
+      window.location = "uses-mobile.html";
     }
   </script>
 </body>
