--- a/tech.html
+++ b/tech.html
@@ -50,7 +50,7 @@
 <body>
   <!-- <div id="navBox"></div> -->
   <script src="js/nav.js"></script>
-  <div class="Hero TechHero" style="background-image: url('https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-deve-picture-id537331536?k=6&m=537331536&s=612x612&w=0&h=W3OOiBYz60iEe98YT9LB-g7ijqayryUqiKIiwIwVDYY=')">
+  <div class="Hero TechHero" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/1/1a/Code.jpg')">
     <div class="Text Title">
       <h1>Available Technologies</h1>
     </div>
